--- a/000 算法的时空间复杂度.md
+++ b/000 算法的时空间复杂度.md
@@ -188,19 +188,28 @@ for(i=1; i<=n; ++i)
 
 这段代码中，第一行new了一个数组出来，这个数据占用的大小为n，这段代码的2-6行，虽然有循环，但没有再分配新的空间，因此，这段代码的空间复杂度主要看第一行即可，即 S(n) = O(n)
 
-[冰与火之歌：「时间」与「空间」复杂度](https://juejin.im/post/5c174198f265da611036f4ea)
 
-[算法的时间与空间复杂度（一看就懂)](https://zhuanlan.zhihu.com/p/50479555)
 
 ## 常用排序算法的时空间复杂度
 
 | 排序方法 |    平均情况  |  最好情况    |   最坏情况   |    辅助空间  |稳定性      |
 | -------- | ---- | ---- | ---- | ---- | ---- |
-|          |      |      |      |      |      |
-|          |      |      |      |      |      |
-|          |      |      |      |      |      |
-|          |      |      |      |      |      |
-|          |      |      |      |      |      |
-|          |      |      |      |      |      |
-|          |      |      |      |      |      |
+| 冒泡排序 | O(n^2^) | O(n) | O(n^2^) | O(1) | 稳定 |
+| 不稳定 | O(n^2^) | O(n^2^) | O(n^2^) | O(1) | 不稳定 |
+| 直接插入排序 | O(n^2^) | O(n) | O(n^2^) | O(1) | 稳定 |
+| 希尔排序 | O(n*logn)~O(n^2^) | O(n^1.3^) | O(n^2^) | O(1) | 不稳定 |
+| 堆排序 | O(n*logn) | O(n*logn) | O(n*logn) | O(1) | 不稳定 |
+| 归并排序 | O(n*logn) | O(n*logn) | O(n*logn) | O(n) | 稳定 |
+| 快速排序 | O(n*logn) | O(n*logn) | O(n^2^) | O(logn)~O(n) | 不稳定 |
 
+
+
+## 参考
+
+[冰与火之歌：「时间」与「空间」复杂度](https://juejin.im/post/5c174198f265da611036f4ea)
+
+[算法的时间与空间复杂度（一看就懂)](https://zhuanlan.zhihu.com/p/50479555)
+
+[维基百科：时间复杂度](https://www.wikiwand.com/zh/时间复杂度)
+
+[维基百科：计算复杂性理论](https://www.wikiwand.com/zh/計算複雜性理論)
